@@ -1,11 +1,15 @@
 Changes for 4.0.6rc1
 
 New features:
-...G...... [ZBXNEXT-4898] added support IPv6 for 'net.dns' and 'net.dns.record' (MVekslers)
-.......PS. [ZBXNEXT-5037] added 'skip' parameter for vmware.eventlog key (MVekslers)
+...G...... [ZBXNEXT-4898] added support IPv6 for "net.dns" and "net.dns.record" (MVekslers)
+.......PS. [ZBXNEXT-5037] added "skip" parameter for vmware.eventlog key (MVekslers)
 ..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)
 
 Bug fixes:
+..F....... [ZBX-15560] fixed incorrect URL argument formatting when parameters are non-indexed arrays (Ivo)
+..F....... [ZBX-15719] fixed undefined index in trigger expression popup (Ivo)
+..F....... [ZBX-15332] fixed dashboard svg graph update on timeselector interval change (gcalenko)
+...G...... [ZBX-15728] fixed agent startup problem in Win 2008 R2 w/o SP1, removed dependency on version helper API (kalimulin)
 ..F....... [ZBX-15622] fixed trigger expression test dialog not being usable with long trigger expressions (talbergs)
 ..F....... [ZBX-13332] fixed issue for large post data in web scenario steps (talbergs)
 ...G...... [ZBX-15607] fixed possibility of zombie processes occurring when signaling agent during metric execution (akozlovs)
